[misc] Updates to demo styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Coverflow Component</title>
+    <meta name="description" content="A React coverflow component" />
     <!-- Scroll Timeline Polyfill -->
     <script src="/scroll-timeline.js"></script>
   </head>
